--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "beam-uri": "^3.1.4",
     "json-ditto": "^1.2.9",
     "json-ditto-v2": "github:BeameryHQ/json-ditto#feature/ditto.v2"
   },
